# CUICUI

./: .gitignore  test.ipynb
biosound-cluster/: .gitignore  API_REFERENCE.md  HANDOFF.md  LOVABLE_API_HANDOFF.md  README.md  WEBSITE_CONTEXT.md  main.py  pyproject.toml
biosound-cluster/sbatches/: dcase_eval.sbatch  probe_denoiser.sbatch  pytest.sbatch
biosound-cluster/scripts/: evaluate_dcase2024.py  tune_dcase2024.py
biosound-cluster/src/biosound_cluster/: __init__.py  acoustic_prefamily.py  adaptive_config.py  api.py  audio_io.py  audio_profile.py  candidate_selection.py  cli.py  clusterability.py  clustering.py  config.py  denoising.py  embeddings.py  eventness.py  export.py  logging_utils.py  noise.py  pipeline.py  polyphony.py  review_routing.py  schemas.py  segmentation.py  segmentation_refinement.py  semantic_tagging.py  visualization.py
biosound-cluster/src/biosound_cluster/evaluation/: __init__.py  calibration.py  cli.py  dcase2024.py  error_audit.py  metrics.py  reporting.py  tuning.py
biosound-cluster/src/biosound_cluster/sota/: README.md  __init__.py  cli.py  config.py  event_extraction.py  export.py  few_shot.py  graph_clustering.py  pipeline.py  schemas.py  windowing.py  zero_shot.py
biosound-cluster/src/biosound_cluster/sota/encoders/: __init__.py  aves.py  base.py  birdnet.py  factory.py  mock.py  perch.py
biosound-cluster/tests/: test_api_helpers.py  test_component_explosion_control.py  test_component_review_export.py  test_dcase_evaluation.py  test_false_positive_audit.py  test_parent_aware_evaluation.py  test_routing_calibration.py  test_smoke_pipeline.py
biosound-cluster/tests/sota/: test_event_extraction.py  test_few_shot.py  test_sota_pipeline_smoke.py  test_windowing.py
