[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biosound-cluster"
version = "0.1.0"
description = "Unsupervised acoustic event detection, embedding, clustering, and export for bioacoustic review."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "biosound-cluster contributors" }
]
dependencies = [
  "numpy",
  "scipy",
  "pandas",
  "librosa",
  "soundfile",
  "scikit-learn",
  "umap-learn",
  "hdbscan",
  "matplotlib",
  "typer",
  "rich",
  "fastapi",
  "uvicorn",
  "python-multipart",
]

[project.optional-dependencies]
sota = [
  "torch>=2.1",
  "torchaudio>=2.1",
  "tensorflow>=2.15",
  "tensorflow-hub>=0.15",
  "kagglehub>=0.2",
  "transformers>=4.40",
  "python-igraph>=0.11",
  "leidenalg>=0.10",
]
sota-birdnet = [
  "birdnet-analyzer>=2.0",
]

[project.scripts]
biosound-cluster = "biosound_cluster.cli:main"
biosound-cluster-sota = "biosound_cluster.sota.cli:main"
biosound-api = "biosound_cluster.api:main"
biosound-evaluate-dcase = "biosound_cluster.evaluation.cli:main"
biosound-tune-dcase = "biosound_cluster.evaluation.cli:tune_main"
biosound-calibrate-routing = "biosound_cluster.evaluation.cli:calibrate_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
